<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.anyasoft.es.surveyapp.details.PersonDetailsActivity"
    tools:showIn="@layout/activity_person_details">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textLayoutMunicipality"
            style="@style/TextInputLayoutStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/edt_municipality"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/municipality_name"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textLayoutWardNum"
            style="@style/TextInputLayoutStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textLayoutMunicipality"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/edt_wardnum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/ward_num"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textLayoutWardName"
            style="@style/TextInputLayoutStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textLayoutWardNum"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/edt_wardname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/ward_name"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textLayoutName"
            style="@style/TextInputLayoutStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textLayoutWardName"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/person_name"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textLayoutAge"
            style="@style/TextInputLayoutStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textLayoutName"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/edtAge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/person_age"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <!-- <android.support.design.widget.TextInputLayout
             android:id="@+id/textLayoutCaste"
             style="@style/TextInputLayoutStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/textLayoutReligion"
             android:layout_centerHorizontal="true">
 -->
        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/edtCaste"
            style="@style/TextInputLayoutStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textLayoutReligion"
            android:layout_centerHorizontal="true"
            android:entries="@array/castes"
            android:hint="@string/person_Caste"
            android:inputType="textPersonName" />
        <!--
                </android.support.design.widget.TextInputLayout>
        -->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textLayoutReligion"
            style="@style/TextInputLayoutStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spnGender"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/edt_religion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/religion"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textLayoutSubcaste"
            style="@style/TextInputLayoutStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtCaste"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/edt_subcaste"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/subcaste"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textLayoutprofession"
            style="@style/TextInputLayoutStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textLayoutSubcaste"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/edt_profession"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/profession"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textLayoutplace"
            style="@style/TextInputLayoutStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textLayoutprofession"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/edt_place"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/place"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textLayoutRelativeName"
            style="@style/TextInputLayoutStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textLayoutplace"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/edt_relative_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/relative_name"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textLayoutNumOfChildren"
            style="@style/TextInputLayoutStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textLayoutRelativeName"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/edt_num_of_children"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/num_of_children"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spnGender"
            style="@style/TextInputLayoutStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textLayoutAge"
            android:layout_centerHorizontal="true"
            android:entries="@array/gender">

        </android.support.v7.widget.AppCompatSpinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/textLayoutNumOfChildren"
            android:background="@color/divider">

            <Button
                android:id="@+id/btnReset"
                style="@style/OptionTextViewStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_weight="1"
                android:background="@drawable/btn_next"
                android:text="@string/Reset"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnSubmit"
                style="@style/OptionTextViewStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:background="@drawable/btn_next"
                android:text="@string/submit"
                android:textColor="@color/white" />

        </LinearLayout>

    </RelativeLayout>


</android.support.v4.widget.NestedScrollView>
