<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.anyasoft.es.surveyapp.ProfileActivity"
    tools:showIn="@layout/activity_profile">


    <android.support.v7.widget.CardView
        android:id="@+id/card_all_quest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="1"
        app:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="430dp">

            <ImageView
                android:id="@+id/img_back_1"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_alignParentTop="true"
                android:scaleType="fitXY"
                android:src="@drawable/survey300x300" />

            <TextView
                android:id="@+id/title_back_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_back_1"
                android:maxLines="3"
                android:padding="8dp"
                android:text="@string/title_back"
                android:textColor="#222"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_back_1"
                android:maxLines="3"
                android:padding="8dp"
                android:text="@string/description_all_in_one"
                android:textColor="#666"
                android:textSize="14sp" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/sync_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_toRightOf="@+id/card_all_quest"
        android:layout_weight="1"
        app:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="430dp">

            <ImageView
                android:id="@+id/img_back_all_data"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_alignParentTop="true"
                android:scaleType="fitXY"
                android:src="@drawable/sync_all" />

            <TextView
                android:id="@+id/title_back_all_sync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_back_all_data"
                android:maxLines="3"
                android:padding="8dp"
                android:text="Sync  surveys"
                android:textColor="#222"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_back_all_sync"
                android:maxLines="3"
                android:padding="8dp"
                android:text="@string/sync_data"
                android:textColor="#666"
                android:textSize="14sp" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_userprofile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:visibility="visible"
        app:cardCornerRadius="4dp">

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/refresh"
            android:layout_width="match_parent"
            android:layout_height="430dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="430dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:background="@color/blue_grey_500"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/to_do" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="My Activities"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rec_plans"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.v4.view.ViewPager
                        android:id="@+id/rec_categ"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v4.widget.SwipeRefreshLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_margin="@dimen/fab_margin"
        android:layout_weight="1"
        android:visibility="gone"
        app:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop"
                android:src="@drawable/start_survey" />

            <TextView
                android:id="@+id/title_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_back"
                android:maxLines="3"
                android:padding="8dp"
                android:text="@string/title_back"
                android:textColor="#222"
                android:textSize="22dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_back"
                android:maxLines="3"
                android:padding="8dp"
                android:text="@string/description_biometric"
                android:textColor="#666"
                android:textSize="14dp" />


        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
